	PR c++/18738 	* decl.c (make_typename_type): Do not handle namespace-scoped 	names here. 	(tag_name): Handle typename_type. 	(check_elaborated_type_specifier): Handle typenames. 	* parser.c (cp_parser_diagnose_invalid_type_name): Improve 	comment. 	(cp_parser_elaborated_type_specifier): Use 	cp_parser_diagnose_invalid_type_name.

PR c++/18738
	* g++.dg/template/typename8.C: New test.
	* g++.dg/parse/friend2.C: Tweak error message.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@92172 138bc75d-0d04-0410-961f-82ee72b054a4